2009-02-17  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/IncludeDocumentExtension.java: set module
	from parent if none is specified for dynamic includes from within
	modules
	* src/de/schlund/pfixxml/resources/ModuleResource.java: disable
	caching on all JarURLConnections

2009-02-16  Martin Leidig  <mleidig@schlund.de>

	* build-maven.xml: added support for deployment via WebDAV and use it
	as default, added support for deploying releases and snapshots to
	different locations (can be set using the build.properties
	remote.repository.url.releases and remote.repository.url.snapshots)

2009-02-16  Martin Leidig  <mleidig@schlund.de>

	Added support for including XML, XSL and images from modules by
	extending the resource resolution mechanism.

	Added:
	* src/de/schlund/pfixcore/util/ModuleInfo.java
	* src/de/schlund/pfixcore/util/ModuleDescriptor.java
	* src/de/schlund/pfixxml/resources/ResourceProvider.java
	* src/de/schlund/pfixxml/resources/DynamicResourceProvider.java
	* src/de/schlund/pfixxml/resources/ModuleResourceProvider.java
	* src/de/schlund/pfixxml/resources/ResourceProviderException.java
	* src/de/schlund/pfixxml/resources/Resource.java
	* src/de/schlund/pfixxml/resources/ResourceProviderRegistry.java
	* src/de/schlund/pfixxml/resources/ModuleResource.java

	Modified:
	* src/org/pustefixframework/http/internal/FactoryInitWorker.java
	* src/org/pustefixframework/config/global/parser/GlobalConfigurationReader.java
	* src/org/pustefixframework/config/generic/PropertyFileReader.java
	* src/de/schlund/pfixcore/lucefix/IncludeFileHandler.java
	* src/de/schlund/pfixcore/lucefix/DocumentCache.java
	* src/de/schlund/pfixcore/editor2/core/spring/PathResolverServiceImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/TargetPfixImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/ImageImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/IncludePartThemeVariantImpl.java