@@ -1,5 +1,10 @@
 2009-02-17  Martin Leidig  <mleidig@schlund.de>
 
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java:
+	Fixed authorization exceptions and NPEs for unconfigured pages
+
+2009-02-17  Martin Leidig  <mleidig@schlund.de>
+
 	* src/de/schlund/pfixxml/IncludeDocumentExtension.java: set module
 	from parent if none is specified for dynamic includes from within
 	modules
